--- a/RevenueRecognitionSystem.csproj
+++ b/RevenueRecognitionSystem.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
           <PrivateAssets>all</PrivateAssets>
@@ -19,6 +20,12 @@
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="xunit" Version="2.8.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="RevenueRecognitionSystem.Tests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="RevenueRecognitionSystem.Tests\obj\project.packagespec.json" />
+      <_ContentIncludedByDefault Remove="RevenueRecognitionSystem.Tests\obj\RevenueRecognitionSystem.Tests.csproj.nuget.dgspec.json" />
     </ItemGroup>
 
 </Project>
